# advent-of-code

./: .gitignore  LICENSE.txt
2021/: README.md
2021/01. Sonar Sweep/One/: .clang-format
2021/01. Sonar Sweep/One/src/: main.cpp
2021/01. Sonar Sweep/Two/: .clang-format
2021/02. Dive/One/: CMakeLists.txt
2021/02. Dive/Two/: CMakeLists.txt
2021/02. Dive/Two/src/: main.cpp
2021/03. Binary Diagnostic/One/src/: main.cpp
2021/04. Giant Squid/Two/: CMakeLists.txt
2021/04. Giant Squid/Two/src/: main.cpp
2021/05. Hydrothermal Venture/One/src/: main.cpp
2021/06. Lanternfish/One/src/: main.cpp
2021/06. Lanternfish/Two/: CMakeLists.txt
2021/06. Lanternfish/Two/src/: main.cpp
2021/07. The Treachery of Whales/One/: CMakeLists.txt
2021/07. The Treachery of Whales/Two/: CMakeLists.txt
2021/08. Seven Segment Search/One/: CMakeLists.txt
2021/08. Seven Segment Search/One/src/: main.cpp
2021/08. Seven Segment Search/Two/src/: main.cpp
2021/09. Smoke Basin/Two/: CMakeLists.txt
2021/09. Smoke Basin/Two/src/: main.cpp
2021/1-1. Sonar Sweep/: .gitignore
2021/1-1. Sonar Sweep/Python/: main.py
2021/1-2. Sonar Sweep/C++/: premake5.lua
2021/1-2. Sonar Sweep/Python/: main.py
2021/1-2. Sonar Sweep/src/: main.cpp
2021/1. Sonar Sweep/src/: main.cpp
2021/10. Syntax Scoring/Two/: CMakeLists.txt
2021/11. Dumbo Octopus/One/src/: main.cpp
2021/12. Passage Pathing/One/src/: main.cpp
2021/12. Passage Pathing/Two/: CMakeLists.txt
2021/13. Transparent Origami/Two/: CMakeLists.txt
2021/13. Transparent Origami/Two/src/: main.cpp
2021/14. Extended Polymerization/Two/: CMakeLists.txt
2021/14. Extended Polymerization/Two/src/: main.cpp
2021/15. Chiton/One/: CMakeLists.txt
2021/15. Chiton/Two/src/: main.cpp
2021/17. Trick Shot/One/src/: main.cpp
2021/2-1. Dive/C++/src/: main.cpp
2021/2-1. Dive/Python/: main.py
2021/2-2. Dive/: premake5.lua
2021/2-2. Dive/Python/: main.py
2021/2-2. Dive/src/: main.cpp
2021/3-1. Binary Diagnostic/C++/src/: main.cpp
2021/3-1. Binary Diagnostic/Python/: main.py
2021/3-2. Binary Diagnostic/C++/: premake5.lua
2021/3-2. Binary Diagnostic/C++/src/: main.cpp
2021/3-2. Binary Diagnostic/Python/: main.py
2023/01. Trebuchet/c++/one/: CMakeLists.txt
2023/01. Trebuchet/c++/one/src/: main.cpp
2023/01. Trebuchet/c++/two/src/: main.cpp
2023/01. Trebuchet/c/one/: CMakeLists.txt
2023/01. Trebuchet/c/one/src/: main.c
2023/01. Trebuchet/c/two/: CMakeLists.txt
2023/01. Trebuchet/c/two/src/: main.c
2023/01. Trebuchet/rust/one/src/: main.rs
2023/01. Trebuchet/rust/two/src/: main.rs
2023/02. Cube Conundrum/c++/one/: CMakeLists.txt
2023/02. Cube Conundrum/c++/one/src/: main.cpp
2023/02. Cube Conundrum/c++/two/: CMakeLists.txt
2023/02. Cube Conundrum/c++/two/src/: main.cpp
2023/02. Cube Conundrum/c/one/: CMakeLists.txt
2023/02. Cube Conundrum/c/one/src/: main.c
2023/02. Cube Conundrum/c/two/: CMakeLists.txt
2023/02. Cube Conundrum/c/two/src/: main.c
2023/02. Cube Conundrum/rust/one/src/: main.rs
2023/02. Cube Conundrum/rust/two/src/: main.rs
2023/03. Gear Ratios/c++/one/src/: main.cpp
2023/03. Gear Ratios/c++/two/src/: main.cpp
2023/03. Gear Ratios/c/one/: CMakeLists.txt
2023/03. Gear Ratios/c/one/src/: main.c
2023/03. Gear Ratios/c/two/: CMakeLists.txt
2023/03. Gear Ratios/c/two/src/: main.c
2023/04. Scratchcards/c++/one/: CMakeLists.txt
2023/04. Scratchcards/c++/two/: CMakeLists.txt
2023/05 If You Give A Seed A Fertilizer/c++/two/: CMakeLists.txt
2023/06. Wait For It/c++/two/: CMakeLists.txt
C++/2021/01. Sonar Sweep/One/: CMakeLists.txt
C++/2021/03. Binary Diagnostic/One/: CMakeLists.txt
C++/2021/03. Binary Diagnostic/Two/: CMakeLists.txt
C++/2021/06. Lanternfish/One/: CMakeLists.txt
C++/2021/10. Syntax Scoring/One/: CMakeLists.txt
C++/2021/16. Packet Decoder/One/: CMakeLists.txt
C++/2021/16. Packet Decoder/Two/: CMakeLists.txt
C++/2021/17. Trick Shot/One/: CMakeLists.txt
Rust/2015/05. Doesnt He Have Intern-Elves For This/two/: Cargo.toml
old/c++/2021/05. Hydrothermal Venture/Two/: CMakeLists.txt
utils/c/: utils.c  utils.h
utils/c++/: utils.hpp
(+60 files in other folders)
